--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,16 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
     "svelte": "^5.28.1",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "ethers": "^6.15.0",
-    "tailwindcss": "^4.1.11"
+    "ethers": "^6.15.0"
   }
 }
